--- a/BigData/Lab1/docker-compose.yml
+++ b/BigData/Lab1/docker-compose.yml
@@ -2,78 +2,114 @@ version: "3"
 
 services:
   namenode:
-    image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
+    image: wxwmatt/hadoop-namenode:2.1.1-hadoop3.3.1-java8
+    build:
+      context: namenode
+      dockerfile: Dockerfile
     container_name: namenode
     restart: always
     ports:
       - 9870:9870
     volumes:
       - hadoop_namenode:/hadoop/dfs/name
+      - ./jobs:/app
+    working_dir: /app
     environment:
       - CLUSTER_NAME=test
+      - HOME=/app
     env_file:
       - ./hadoop.env
 
   datanode1:
-    image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
+    image: wxwmatt/hadoop-datanode:2.1.1-hadoop3.3.1-java8
+    build:
+      context: datanode
+      dockerfile: Dockerfile
     container_name: datanode1
     restart: always
+    ports:
+      - 9864:9864
     volumes:
       - hadoop_datanode1:/hadoop/dfs/data
     environment:
       SERVICE_PRECONDITION: "namenode:9870"
     env_file:
       - ./hadoop.env
-  
+
   datanode2:
-    image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
+    image: wxwmatt/hadoop-datanode:2.1.1-hadoop3.3.1-java8
+    build:
+      context: datanode
+      dockerfile: Dockerfile
     container_name: datanode2
     restart: always
+    ports:
+      - 9865:9864
     volumes:
       - hadoop_datanode2:/hadoop/dfs/data
     environment:
       SERVICE_PRECONDITION: "namenode:9870"
     env_file:
       - ./hadoop.env
-  
+
   resourcemanager:
-    image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.2.1-java8
+    image: wxwmatt/hadoop-resourcemanager:2.1.1-hadoop3.3.1-java8
+    build:
+      context: resourcemanager
+      dockerfile: Dockerfile
     container_name: resourcemanager
     restart: always
+    ports:
+      - 8088:8088
     environment:
       SERVICE_PRECONDITION: "namenode:9870 datanode1:9864 datanode2:9864"
     env_file:
       - ./hadoop.env
 
   nodemanager1:
-    image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.2.1-java8
+    image: wxwmatt/hadoop-nodemanager:2.1.1-hadoop3.3.1-java8
+    build:
+      context: nodemanager
+      dockerfile: Dockerfile
     container_name: nodemanager1
     restart: always
+    ports:
+      - 8042:8042
     environment:
       SERVICE_PRECONDITION: "namenode:9870 datanode1:9864 resourcemanager:8088"
     env_file:
       - ./hadoop.env
 
   nodemanager2:
-    image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.2.1-java8
+    image: wxwmatt/hadoop-nodemanager:2.1.1-hadoop3.3.1-java8
+    build:
+      context: nodemanager
+      dockerfile: Dockerfile
     container_name: nodemanager2
     restart: always
+    ports:
+      - 8043:8042
     environment:
       SERVICE_PRECONDITION: "namenode:9870 datanode2:9864 resourcemanager:8088"
     env_file:
       - ./hadoop.env
-  
+
   historyserver:
-    image: bde2020/hadoop-historyserver:2.0.0-hadoop3.2.1-java8
+    image: wxwmatt/hadoop-historyserver:2.1.1-hadoop3.3.1-java8
+    build:
+      context: historyserver
+      dockerfile: Dockerfile
     container_name: historyserver
     restart: always
+    ports:
+      - 8188:8188
     environment:
       SERVICE_PRECONDITION: "namenode:9870 datanode1:9864 datanode2:9864 resourcemanager:8088"
     volumes:
       - hadoop_historyserver:/hadoop/yarn/timeline
     env_file:
       - ./hadoop.env
-  
+
 volumes:
   hadoop_namenode:
   hadoop_datanode1:
